--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "browserrouter",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://ifuenteromero.github.io/browser/",
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
