--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "browserrouter",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ifuenteromero.github.io/browser",
+  "homepage": "https://ifuenteromero.github.io/browser/",
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -10,6 +10,8 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -29,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
